
2)  If a DNAT or REDIRECT rule applied to a source zone with an
    interface defined with 'physical=+', then the nat table 'dnat'
    chain might have been created but not referenced. This prevented
    the DNAT or REDIRECT rule from working correctly.

3)  Previously, if a variable set in /etc/shorewall/params was given a
    value containing shell metacharacters, then the compiled script
    would contain syntax errors. 

Beta 5

1)  Correct a problem whereby incorrect Netfilter rules were generated
    when a bridge with ports was given a logical name.

Beta 4

1)  If a bridge interface had subordinate ports defined in
    /etc/shorewall/interface, then an ipsec entry (either ipsec zone or
    the 'ipsec' option specified) in /etc/shorewall/hosts resulted in
    the compiler generating an incorrect Netfilter configuration.

Beta 3

None.

Beta 2

1)  A correction to the Beta 1 fix for params processing has been
    included.

2)  Editing of ICMP type lists has been improved.

Beta 1

1)  Previously /var/log/shorewall*-init.log was created in the wrong
    Selinux context. The rpm's have been modified to correct that
    issue.

2)  An issue with params processing on RHEL6 has been corrected. The
    problem manifested as the following type of warning:

       WARNING: Param line (export OLDPWD) ignored at 
                /usr/share/shorewall/Shorewall/Config.pm line 2993.

----------------------------------------------------------------------------
           I I.  K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

1)  On systems running Upstart, shorewall-init cannot reliably secure
    the firewall before interfaces are brought up.

----------------------------------------------------------------------------
      I I I.  N E W   F E A T U R E S   I N   T H I S  R E L E A S E
----------------------------------------------------------------------------
