@@ -1,6 +1,6 @@
 %define name shorewall-init
 %define version 4.4.19
-%define release 0RC1
+%define release 0base
 
 Summary: Shorewall-init adds functionality to Shoreline Firewall (Shorewall).
 Name: %{name}
@@ -119,6 +119,8 @@ fi
 %doc COPYING changelog.txt releasenotes.txt
 
 %changelog
+* Sat Apr 09 2011 Tom Eastep tom@shorewall.net
+- Updated to 4.4.19-0base
 * Sun Apr 03 2011 Tom Eastep tom@shorewall.net
 - Updated to 4.4.19-0RC1
 * Sun Apr 03 2011 Tom Eastep tom@shorewall.net
